Implementing GW module, restructuring and refactoring

--- a/snippets/gift-wrapping.liquid
+++ b/snippets/gift-wrapping.liquid
@@ -54,56 +54,45 @@
       Shopify.Cart = Shopify.Cart || {};
 
       Shopify.Cart.GiftWrap = (function () {
-          var _giftWrapKeyEscapedStr = null;
-          var _count = 0;
+          var _key = '';
+          var _keyEscaped = '';
+          var _quantity = 0;
 
           function setKey(k) {
-              this.key = k;
-              _giftWrapKeyEscapedStr = $.escapeSelector(this.key);
-          }
-          function init(key) {
-              this.setKey(key);
-              _count = this.count();
-          }
-          function count() {
-              var itemsInCart = 0;
-              var key = this.key;
-              // Count total qty in cart for items that are not the gift wrap product
-              $('input.{{ cart_item_class }}').each(function countItems() {
-                  console.log("this.id -> " + this.id);
-                  // If gift-wrap product is in cart, then don't count its quantity
-                  if (key && this.id.includes(key)) {
-                      console.log("gift-wrap cart key matched");
-                      return;
-                  }
-                  itemsInCart += (+this.value);
-                  console.log("Num items: " + itemsInCart);
-              });
-
-              return itemsInCart;
-          }
-          function updateGiftWrapCount() {
-              var itemsInCart = Shopify.Cart.GiftWrap.count();
-
-              // Update gift wrap quantity to match total items quantity
-              // The id changes from updates_<key> to quantity_<key> after cart refresh with Theme Narrative (bug)!!!
-              if (giftWrapKeyEscapedStr) {
-                  jQuery('#quantity_' + giftWrapKeyEscapedStr).val(itemsInCart);
-                  jQuery('#updates_' + giftWrapKeyEscapedStr).val(itemsInCart);
+              if (typeof k !== 'undefined') {
+                  _key = k;
+                  _keyEscaped = $.escapeSelector(_key);
               }
-              Shopify.Cart.GiftWrap.set(itemsInCart, $.noop);
+          }
+          function getKey() {
+              return _key;
+          }
+          function getKeyEscaped() {
+              return _keyEscaped;
+          }
+          function getQuantity() {
+              return _quantity;
+          }
+          function _setQuantity(q) {
+              if (typeof q === 'number') {
+                  _quantity = q;
+              }
+          }
+          function init(key, quantity) {
+              setKey(key);
+              _setQuantity(quantity);
           }
           // Parameterized the function
           // Save gift-note
           function set(numItems, callback) {
               function defaultSuccess() { location.href = '/cart'; }
-              var done = (typeof callback === 'function') ? callback : defaultSuccess;
-              var itemsInCart = (typeof numItems === 'number') ? numItems : {{ items_in_cart }};
               var note = jQuery('#gift-note').val();
+              var done = (typeof callback === 'function') ? callback : defaultSuccess;
+              _setQuantity(numItems);
               jQuery.ajax({
                     type: 'POST',
                     url: '/cart/update.js',
-                    data: { updates: { {{ id }}: itemsInCart }, attributes: { 'gift-wrapping': true, 'gift-note': note } },
+                    data: { updates: { {{ id }}: _quantity }, attributes: { 'gift-wrapping': true, 'gift-note': note } },
                     dataType: 'json',
                     success: done
               });
@@ -112,6 +101,7 @@
           function remove(callback) {
               function defaultSuccess() { location.href = '/cart'; }
               var done = (typeof callback === 'function') ? callback : defaultSuccess;
+              _setQuantity(0);
               jQuery.ajax({
                     type: 'POST',
                     url: '/cart/update.js',
@@ -122,35 +112,16 @@
           }
 
           return {
-              key       : '{{ gift_wraps_in_cart_key | default: "" }}',
               costModel : '{{ settings.gift_wrapping_cost_model | default: "per_item" }}',
               setKey    : setKey,
-              count     : count,
-              updateGiftWrapCount: updateGiftWrapCount,
+              getKey    : getKey,
+              getKeyEscaped: getKeyEscaped,
+              getQuantity: getQuantity,
               set       : set,
               remove    : remove,
               init      : init
           };
       })(); //IIFE returning a GiftWrap object
-
-      // Observer to monitor nodes addition/removal in cart drawer's item list
-      // and update the GW count accordingly
-      Shopify.Cart.ObserverItemList = new MutationObserver(function observeItemList(mutations) {
-          var changed = mutations.some(function inspectMutation(m) {
-              if (m.type === 'childList') {
-                  if (m.addedNodes.length || m.removedNodes.length) {
-                      if (m.target === document.querySelector('{{ cart_container_selector }}')) {
-                          return true;
-                      }
-                  }
-              }
-              return false;
-          });
-
-          if (changed) {
-              Shopify.Cart.GiftWrap.updateGiftWrapCount();
-          }
-      });
 
       {% unless settings.show_cart_drawer %}
           // If we have nothing but gift-wrap items in the cart.
@@ -186,6 +157,58 @@
       // the checks from the above if/elsif/endif block.
       // The change consists of performing a recount of total qty of items before setting the GW qty.
       jQuery(function() {
+
+          Shopify.Cart.GiftWrap.init({{ gift_wraps_in_cart_key | default: "" }}, {{ items_in_cart | default: 0 }});
+
+          // Observer to monitor nodes addition/removal in cart drawer's item list
+          // and update the GW count accordingly
+          Shopify.Cart.observerItemList = new MutationObserver(function observeItemList(mutations) {
+              var changed = mutations.some(function inspectMutation(m) {
+                  if (m.type === 'childList') {
+                      if (m.addedNodes.length || m.removedNodes.length) {
+                          if (m.target === document.querySelector('{{ cart_container_selector }}')) {
+                              return true;
+                          }
+                      }
+                  }
+                  return false;
+              });
+
+              if (changed) {
+                  Shopify.Cart.updateGiftWrapCount();
+              }
+          });
+
+          Shopify.Cart.count = function () {
+              var itemsInCart = 0;
+              var key = Shopify.Cart.GiftWrap.getKey();
+              // Count total qty in cart for items that are not the gift wrap product
+              $('input.{{ cart_item_class }}').each(function countItems() {
+                  console.log("this.id -> " + this.id);
+                  // If gift-wrap product is in cart, then don't count its quantity
+                  if (key && this.id.includes(key)) {
+                      console.log("gift-wrap cart key matched");
+                      return;
+                  }
+                  itemsInCart += (+this.value);
+                  console.log("Num items: " + itemsInCart);
+              });
+
+              return itemsInCart;
+          };
+
+          Shopify.Cart.updateGiftWrapCount = function () {
+              var itemsInCart = Shopify.Cart.count();
+
+              // Update gift wrap quantity to match total items quantity
+              // The id changes from updates_<key> to quantity_<key> after cart refresh with Theme Narrative (bug)!!!
+              if (Shopify.Cart.GiftWrap.getKeyEscaped()) {
+                  jQuery('#quantity_' + Shopify.Cart.GiftWrap.getKeyEscaped()).val(itemsInCart);
+                  jQuery('#updates_' + Shopify.Cart.GiftWrap.getKeyEscaped()).val(itemsInCart);
+              }
+              Shopify.Cart.GiftWrap.set(itemsInCart, $.noop);
+          };
+
           function addGWItemToDOM() {
               // Retrieves "Gift Wrap Stub" page from the "Gift Wrapping" menu.
               // The page contains the generated HTML node of the Gift Wrap line item to be inserted in the Cart Drawer.
@@ -215,17 +238,18 @@
           }
 
           function removeGWItemfromDOM() {
-              giftWrapKeyEscapedStr && jQuery('#' + giftWrapKeyEscapedStr + ' {{ cart_remove_btn_selector }}').trigger('click');
+              var key = Shopify.Cart.GiftWrap.getKeyEscaped();
+              key && jQuery('#' + key + ' {{ cart_remove_btn_selector }}').trigger('click');
               Shopify.Cart.GiftWrap.setKey('');
           }
 
           function updateGWQuantity() {
               if (jQuery('#{{ gift_wrap_checkbox_id }}').prop('checked')) {
-                  Shopify.Cart.GiftWrap.updateGiftWrapCount();
+                  Shopify.Cart.updateGiftWrapCount();
               }
           }
 
-          function removeGWBtnHandler() {
+          function handlerRemoveGWBtn() {
               removeObservers();
               // Note: this does NOT trigger the "change" event on the GW checkbox
               jQuery('#{{ gift_wrap_checkbox_id }}').prop('checked', false);
@@ -240,22 +264,24 @@
               var target = document.querySelector('{{ cart_container_selector }}');
               var config = { childList: true };
               // Activate observer for cart's item removal or addition, enabling auto-refresh of GW qty
-              Shopify.Cart.ObserverItemList.observe(target, config);
+              Shopify.Cart.observerItemList.observe(target, config);
               // Attach listener for qty input element change of each item, enabling auto-refresh of GW qty
               jQuery('{{ cart_container_selector }}').on('change.updateGiftWrapCount', 'input.{{ cart_item_class }}', updateGWQuantity);
               // Attach listener to Gift Wrap item's remove button
-              giftWrapKeyEscapedStr && jQuery('#' + giftWrapKeyEscapedStr).on('click.removeGWLineItem', '{{ cart_remove_btn_selector }}', removeGWBtnHandler);
+              var key = Shopify.Cart.GiftWrap.getKeyEscaped();
+              key && jQuery('#' + key).on('click.removeGWLineItem', '{{ cart_remove_btn_selector }}', handlerRemoveGWBtn);
           }
 
           function removeObservers() {
               console.log('Removing GW observers...');
-              Shopify.Cart.ObserverItemList.disconnect();
+              Shopify.Cart.observerItemList.disconnect();
               jQuery('{{ cart_container_selector }}').off('change.updateGiftWrapCount', 'input.{{ cart_item_class }}', updateGWQuantity);
-              giftWrapKeyEscapedStr && jQuery('#' + giftWrapKeyEscapedStr).off('click.removeGWLineItem', '{{ cart_remove_btn_selector }}', removeGWBtnHandler);
+              var key = Shopify.Cart.GiftWrap.getKeyEscaped();
+              key && jQuery('#' + key).off('click.removeGWLineItem', '{{ cart_remove_btn_selector }}', handlerRemoveGWBtn);
           }
 
           if (jQuery('#{{ gift_wrap_checkbox_id }}').prop('checked')) {
-              Shopify.Cart.GiftWrap.updateGiftWrapCount();
+              Shopify.Cart.updateGiftWrapCount();
               attachObservers();
           }
 
@@ -269,7 +295,7 @@
 
           jQuery('#{{ gift_wrap_checkbox_id }}').change(function checkboxCb() {
               if (jQuery(this).prop('checked')) {
-                  Shopify.Cart.GiftWrap.set(Shopify.Cart.GiftWrap.count(), setGiftWrapCb);
+                  Shopify.Cart.GiftWrap.set(Shopify.Cart.count(), setGiftWrapCb);
               }
               else {
                   removeObservers();
@@ -278,7 +304,7 @@
           });
 
           jQuery('#gift-note').on('change', function saveGWNote() {
-              var quantity  = jQuery('#{{ gift_wrap_checkbox_id }}').prop('checked') ? Shopify.Cart.GiftWrap.count() : 0;
+              var quantity  = jQuery('#{{ gift_wrap_checkbox_id }}').prop('checked') ? Shopify.Cart.count() : 0;
               var note      = jQuery(this).val();
               console.log('Saving GW note...');
               jQuery.ajax({
